# haskell-pruebas

./: CHANGELOG.md  README.md  git-clone-haskell-pruebas.bat  hie.yaml  prueba.cabal
bench/: Bench.hs
src/: Lib.hs  Main.hs
test/: LibSpec.hs
