cabal-version:       3.0
name:                prueba
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              joseaanton
-- maintainer:          38797959+joseaanton@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-options
  -- | See https://limperg.de/ghc-extensions/
  default-extensions:
    BangPatterns
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TupleSections
    TypeApplications
    -- Otros
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    StandaloneDeriving

  other-extensions:
    NoImplicitPrelude
 
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
  
  default-language:    Haskell2010

common common-depends
  build-depends:         base >=4.7 && <5
                       , relude
                       , text
                       , bytestring

library
  import:              common-options, common-depends
  exposed-modules:     Lib 
  other-modules:       
  hs-source-dirs:      src
  build-depends:       


executable main
  import:              common-options, common-depends
  main-is:             Main.hs
  other-modules:       Lib
  hs-source-dirs:      src
  other-extensions:
  ghc-options:         
  build-depends:       


test-suite test
  import:              common-options, common-depends
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Lib
  hs-source-dirs:      src, test
  other-extensions:
  ghc-options:         
  build-depends:       hspec
  build-tool-depends:  hspec-discover:hspec-discover

benchmark bench  
  import:              common-options, common-depends
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  other-modules:       Lib
  hs-source-dirs:      src, bench
  other-extensions:
  ghc-options:         
  build-depends:       criterion
 
